--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -28,4 +28,4 @@ jobs:
           NEXT_PUBLIC_PUBLISHABLE_KEY: https://abcd
 
       - name: Deploy static site to S3 bucket
-        run: aws s3 sync ./.next s3://sekyungk.seoul
+        run: aws s3 sync ./build s3://sekyungk.seoul
