--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -23,9 +23,9 @@ jobs:
           aws-region: ap-northeast-2
 
       - name: Build
-        run: yarn && yarn build
+        run: yarn && yarn export
         env:
           NEXT_PUBLIC_PUBLISHABLE_KEY: https://abcd
 
       - name: Deploy static site to S3 bucket
-        run: aws s3 sync ./build s3://sekyungk.seoul
+        run: aws s3 sync ./out s3://sekyungk.seoul
