--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -25,8 +25,8 @@ jobs:
       - name: Build
         run: yarn && yarn build && yarn export
         env:
-          NEXT_PUBLIC_PUBLISHABLE_KEY: https://abcd
-          ENV: asdfasdf
+          NEXT_PUBLIC_PUBLISHABLE_KEY: https://aa
+          ENV: aa
 
       - name: Deploy static site to S3 bucket
         run: aws s3 sync ./out s3://sekyungk.seoul
