--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -1,11 +1,14 @@
 {
-  "name": "next-build-test",
+  "name": "admin",
   "private": true,
   "workspaces": [
     "apps/*"
   ],
   "scripts": {
-    "build": "yarn workspaces foreach -ti run build"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "export": "next export"
   },
   "dependencies": {
     "next": "^11.0.1",
