--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -29,4 +29,4 @@ jobs:
           ENV: aa
 
       - name: Deploy static site to S3 bucket
-        run: aws s3 sync ./apps/admin/out s3://sekyungk.seoul
+        run: aws s3 sync apps/admin/out s3://sekyungk.seoul
